# URL_Citation_Classification_Intermediate

./: README.md  main.py  pyproject.toml
src/base/: model.py  training.py  trec_fine_run.py  url_cite_assets.py
src/base_hydra/conf/: config.yaml
src/base_hydra/conf/model/: bert_base.yaml  bert_large.yaml  modernbert_base.yaml  modernbert_large.yaml  roberta_base.yaml
src/base_hydra/conf/training/: debug.yaml  default.yaml  large_model.yaml
src/base_hydra/src/: model.py  preprocess_hydra.py  training_hydra.py  url_cite_assets.py  url_cite_run_hydra.py
src/each_task/: ag_news_run.py  banking77_run.py  clickbait_run.py  cola_run.py  edos_task1_run.py  edos_task2_run.py  edos_task3_run.py  emotion_run.py  r52_run.py  r8_run.py  sst2_run.py  sst5_run.py  trec_coarse_run.py  url_cite_run.py  url_zhao_run.py
